# cosh

./: .clang-format  .gitignore  CMakeLists.txt  conanfile.txt
src/: CMakeLists.txt
src/include/cosh/utils/: log.h  sington.h  std.h
src/utils/: CMakeLists.txt  log.cpp
test/: CMakeLists.txt
